--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	path = www/platform
 	url = https://github.com/cobaltians/Cobalt-Web-iOS.git
 	branch = develop
-[submodule "www/Samples-Angular2-Web"]
-	path = www/Samples-Angular2-Web
+[submodule "www/common"]
+	path = www/common
 	url = https://github.com/AntoineBarroux/Samples-Angular2-Web.git
 	branch = web
